Further cleanup to avoid lint moaning in AS.